--- a/public/css/app.css
+++ b/public/css/app.css
@@ -512,6 +512,9 @@ video {
 .m-auto {
   margin: auto;
 }
+.mr-4 {
+  margin-right: 1rem;
+}
 .-mt-20 {
   margin-top: -5rem;
 }
@@ -529,12 +532,6 @@ video {
 }
 .mt-5 {
   margin-top: 1.25rem;
-}
-.ml-4 {
-  margin-left: 1rem;
-}
-.mr-4 {
-  margin-right: 1rem;
 }
 .block {
   display: block;
@@ -571,6 +568,9 @@ video {
 }
 .w-10 {
   width: 2.5rem;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .w-2\/12 {
   width: 16.666667%;
