import excel research and pengmas

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -892,6 +892,9 @@ video {
 .font-medium {
   font-weight: 500;
 }
+.font-bold {
+  font-weight: 700;
+}
 .uppercase {
   text-transform: uppercase;
 }
